test/fail/actor-reference-infer.mo
// actor references

let _ = actor "ic:C0FEFED00D41";  // cannot infer
